tests/errors/surf_parse_04.experr
error: expected ':' after the switch subject